Refactor authentication and use cookie based auth.